--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
     "devDependencies": {
         "@symfony/webpack-encore": "^0.27.0",
         "core-js": "^3.0.0",
+        "node-sass": "^4.12.0",
+        "sass-loader": "^7.0.1",
         "webpack-notifier": "^1.6.0"
     },
     "license": "UNLICENSED",
@@ -11,5 +13,6 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
-    }
+    },
+    "dependencies": {}
 }
