--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -25,6 +25,9 @@ security:
             guard:
                 authenticators:
                     - App\Security\LoginFormAuthenticator
+    role_hierarchy:
+        ROLE_MAIRE: ROLE_CITOYEN
+        ROLE_CITOYEN: ROLE_USER
 
 
             # activate different ways to authenticate
